k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sor
  namespace: sor
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: sor
