k8s-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sor-ingress
  namespace: sor
spec:
  tls:
    - hosts:
        - spaceofresolution.com
      secretName: spaceofresolution-tls
  rules:
    - host: spaceofresolution.com
      http:
        paths:
          - backend:
              service:
                name: sor
                port:
                  number: 3000
            pathType: Prefix
            path: /
